# arcane-chat

./: .clang-format  .gitignore  arcane-chat.sublime-project  default.nix  doc.nix  helpers  notes.txt  redo.nix  release.nix  windows.org
chat/: .gitignore  CMakeLists.txt  Makefile.in  chat.pro  default.nix  input.json  input.yaml  network.proto  shake
chat-shaker/: .stylish-haskell.yaml  chat-shaker.hs  default.nix
chat/doc/: CMakeLists.txt  Doxyfile.in  doxygen.bash
chat/doc/include/: extra.css  extra.js  header.html
chat/proto/: database.proto  gstreamerd.proto  network.proto
chat/res/: style.qss
chat/src/: Main.cc  Main.hh  Main.purs  audiocall.cpp  audiocall.hpp  broker.cpp  callcontrol.cpp  callcontrol.hpp  channel.cpp  channel.hpp  channelmodel.cpp  channelmodel.h  channelmodel.hpp  chat.cpp  chatwidget.cpp  chatwidget.h  chatwidget.hpp  chatwidget.ui  client.cpp  config.hpp  core.cpp  core.hpp  core_db.cpp  core_db.hpp  database_task.cpp  database_task.hpp  db.cpp  db.hpp  enums.hpp  friend.cpp  friend.h  friend.hpp  goutputstream.cpp  goutputstream.hpp  gst.cpp  infowidget.cpp  infowidget.hpp  infowidget.ui  kiss.cpp  kiss.hpp  (+35 more)
chat/state_util/: state_test.cpp  state_util.pro
fixes/: cairo.nix  fetchpsc.nix  glib-debug.patch  lame-dbl-epsilon.patch  libgsf-dllmain.patch  libmsgpack.nix  mingw-w64.nix  pango.nix  pocketsphinx-fix-caps.patch  protobuf.nix  protobuf.patch  protobuf3.nix  pythonPackages.nix  qtsvg-epsilon.patch  sphinxbase.nix  toxcore-expose-udp.patch  win-dll-link.sh
fixes/5.6/: default.nix  qtsvg.nix
fixes/5.6/qtbase/: default.nix
fixes/cldoc/: default.nix
fixes/glib/: 0004-glib-prefer-constructors-over-DllMain.patch
fixes/gobject-introspection/: default.nix
fixes/gstreamer/: default.nix
fixes/gstreamer/bad/: default.nix
fixes/gstreamer/base/: default.nix
fixes/gstreamer/core/: default.nix  gstreamer-localtime_r.patch
fixes/gstreamer/good/: default.nix
fixes/gstreamer/gstreamermm/: default.nix  glibmm-2.50.patch  iface.patch
fixes/gstreamer/libav/: default.nix
fixes/gstreamer/mm-common/: default.nix  libstdc++.tag
fixes/gstreamer/qt-gstreamer/: CMakeLists.txt  default.nix  exports.patch
fixes/gstreamer/ugly/: default.nix
fixes/gstreamer/vaapi/: default.nix
fixes/haskellPackages/: default.nix  language-javascript.nix  purescript-native.nix
fixes/htmldoc/: default.nix
fixes/libtoxcore/new-api/: default.nix
fixes/pocketsphinx/: default.nix
fixes/protoc-gen-doc/: default.nix  usr-local.patch
